Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15197

Try/Catch in reimplemented QApp::notify does not working on Mac OsX

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.5.0 Beta
    • 4.7.1
    • None
    • QT 4.7.0, 4.7.1, debug & release
    • macOS
    • 08cc9b9991ae9ab51bed5b857b6257401401ff6f

      I can not catch top level exceptions in Mac OsX. There are no problem in Windows.

      There is my code:

      class App: public QApplication{
      public:
      ...
          bool notify(QObject *o, QEvent *e){
              try
              {
                      return QApplication::notify(o, e);
              }
              catch(...){
                  QMessageBox::information(0,tr("Error"),tr("Press OK to continue."));
              }
          }
      }
      
      int main(int argc, char *argv[])
      {
          App a(argc, argv);
          try{
             MainWindow w;
             w.resize(900,700);
             w.show();
      
            return a.exec();
          }catch(..){
              QMessageBox::information(0,"Critical error","Press OK to close program");
           }
      }
      

      I send throw an exception in MainWindow.
      I see "Error" message with continue on Windows platform, but on Mac OsX I see only Critical Error without continue.

      On MacOs in debug output I see the message from QT:
      "Qt has caught an exception thrown from an event handler. Throwing
      exceptions from an event handler is not supported in Qt. You must
      reimplement QApplication::notify() and catch all exceptions there."

      But I already do it.

        1. main.cpp
          1 kB
          Andrew Semenenko
        2. QtBug-15197.pro
          0.2 kB
          Andrew Semenenko
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            cemehehko Andrew Semenenko
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes